# poetry_api_book

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
main/: urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order.py
poetry_book/: asgi.py  settings.py  urls.py  wsgi.py
product/migrations/: 0001_initial.py
product/serializers/: __init__.py  category.py  product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category.py  product.py
templates/main/: base.html  index.html
tests/models/: test_category.py  test_order.py  test_product.py
