[tool.poetry]
name = "poetry_book"
version = "0.1.0"
description = "A project with Poetry: Book Api"
authors = ["bruno <bruno.mcreal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.1"
factory-boy = "^3.2.1"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
Faker = "^13.0.0"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
